--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,21 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
     "@prisma/client": "^4.11.0",
+    "@reduxjs/toolkit": "^1.9.3",
     "antd": "^5.4.0",
     "axios": "^1.3.5",
     "cookies-next": "^2.1.1",
+    "dayjs": "^1.11.7",
+    "emoji-mart": "^5.5.2",
     "next": "^13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-query": "^3.39.3",
+    "react-redux": "^8.0.5",
     "sass": "^1.61.0",
     "socket.io-client": "^4.6.1",
     "superjson": "1.12.2"
